--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Vôlei Pro">
     
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏐</text></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23007aff' d='M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm0 32c25.4 0 49.8 5.6 71.9 15.6l-50.5 87.4c-6.9-1.9-14.1-3-21.4-3s-14.5 1.1-21.4 3l-50.5-87.4C206.2 85.6 230.6 80 256 80zM102 169.5c15.2-26.4 36.6-48.4 62-64.3l50.5 87.4c-11.1 6.4-20.2 15.5-26.6 26.6l-85.9 0c0-.1 0-.1 0 0zM80 256c0-14 1.7-27.6 4.9-40.6l85.9 0c-1.9 6.9-3 14.1-3 21.4s1.1 14.5 3 21.4H84.9C81.7 283.6 80 270 80 256zm22 86.5l85.9 0c6.4 11.1 15.5 20.2 26.6 26.6l-50.5 87.4c-25.4-15.9-46.8-37.9-62-64.3l0 .3zm154 89.5c-25.4 0-49.8-5.6-71.9-15.6l50.5-87.4c6.9 1.9 14.1 3 21.4 3s14.5-1.1 21.4-3l50.5 87.4C305.8 424.4 281.4 430 256 430zm154-87.5c-15.2 26.4-36.6 48.4-62 64.3l-50.5-87.4c11.1-6.4 20.2-15.5 26.6-26.6l85.9 0zM432 256c0 14-1.7 27.6-4.9 40.6h-85.9c1.9-6.9 3-14.1 3-21.4s-1.1-14.5-3-21.4h85.9c3.2 13 4.9 26.6 4.9 40.6zm-22-86.5h-85.9c-6.4-11.1-15.5-20.2-26.6-26.6l50.5-87.4c25.4 15.9 46.8 37.9 62 64.3l0-.3z'%3E%3C/path%3E%3C/svg%3E">
     
     <meta name="theme-color" content="#007aff">
 
@@ -397,3 +397,4 @@
     </script>
 </body>
 </html>
+
